@@ -1,4 +1,5 @@
 Version 5.9.9
+- Added special preprocessor comments {$flexspin ... } for FlexSpin specific code.
 - Allow dynamic sign/zero extend on P1 (thanks Ada)
 - Fixed variable redeclaration in Basic OPTION IMPLICIT
 - Fixed an immediate addressing bug that showed up with DECLARE ALIAS sometimes
